# event-to-news

./: AGENTS.md  Dockerfile  config.yml  docker-compose.yml  pyproject.toml
src/event_to_news/: __init__.py  base_module.py  config.py  feed_store.py  main.py  models.py  module_loader.py  rss.py  scheduler.py  server.py
src/event_to_news/modules/: __init__.py  cafetaria.py  pronote.py
