[project]
name = "event-to-news"
version = "0.1.0"
description = "Expose arbitrary event sources as RSS feeds"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "apscheduler>=3.10.4",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",
    "feedgen>=1.0.0",
    "pronotepy>=2.12.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
event-to-news = "event_to_news.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/event_to_news"]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]
